fix(Hero): Right align img & update positioning

--- a/src/components-app/headers/Hero/HeroImage/index.module.scss
+++ b/src/components-app/headers/Hero/HeroImage/index.module.scss
@@ -2,6 +2,11 @@
 
 .hero-img {
   width: 100%;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
 
   img {
     @include image__border;
@@ -9,6 +14,7 @@
     margin: 0 auto;
     width: 100%;
     object-fit: cover;
-    object-position: 0 50%;
+    object-position: 100% 50%;
+    float: right;
   }
 }
