--- a/src/components-app/headers/Hero/index.module.scss
+++ b/src/components-app/headers/Hero/index.module.scss
@@ -2,7 +2,7 @@
 
 .hero {
   width: 100%;
-  height: 350px;
+  min-height: 350px;
 
   @include respond_desktop {
     height: 550px;
@@ -19,7 +19,6 @@
 
     &.top,
     &.bottom {
-      position: absolute;
       padding: 40px;
       left: 0;
       right: 0;
@@ -48,6 +47,15 @@
       @include respond_tablet {
         display: block;
       }
+    }
+  }
+
+  .block {
+    &.sm {
+      margin-top: 10px;
+    }
+    &.lg {
+      margin-top: 20px;
     }
   }
 }
